<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.astrometric.MainActivity">
<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#9b59b6"
    android:orientation="vertical"
    >
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="150dp"
    android:src="@drawable/stars"
    />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textColor="#fff"
    android:textSize="36dp"
    android:fontFamily="sans-serif-light"
    android:textAlignment="center"/>
    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:textColor="@color/primaryText"
        android:textSize="18sp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/question1_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/question1_choice1" />

        <RadioButton
            android:id="@+id/question1_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/question1_choice2" />

        <RadioButton
            android:id="@+id/question1_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/question1_choice3" />
    </RadioGroup>

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/question2_answer"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/question2"
        android:textColor="@color/primaryText"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/question2_answer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/question3"
        android:textColor="@color/primaryText"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/question3_choice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3_choice1" />

    <CheckBox
        android:id="@+id/question3_choice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3_choice2" />

    <CheckBox
        android:id="@+id/question3_choice3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3_choice3" />

    <CheckBox
        android:id="@+id/question3_choice4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3_choice4" />


    <TextView
        android:id="@+id/question4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/question4"
        android:textColor="@color/primaryText"
        android:textSize="18sp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/question4_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4_choice1" />

        <RadioButton
            android:id="@+id/question4_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4_choice2" />
    </RadioGroup>


    <Button
        android:id="@+id/submit_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitAnswers"
        android:text="@string/submit_answers"
        android:layout_alignParentRight="true"/>

</LinearLayout>
</ScrollView>